# trabalho-2-delta-minio

./: .env.example  .gitignore  404.html  README.md  docker-compose.yml  index.html  mkdocs.yml  pyproject.toml
data/: apolice.csv  carro.csv  cliente.csv  endereco.csv  estado.csv  marca.csv  modelo.csv  municipio.csv  regiao.csv  sinistro.csv  telefone.csv
delta/: index.html
docs/: delta.md  index.md  minio.md  pipeline.md
minio/: index.html
notebooks/: 00_setup_sqlserver.ipynb  01_sqlserver_to_landing.ipynb  02_landing_to_bronze.ipynb  03_dml_delta.ipynb
pipeline/: index.html
search/: search_index.json
