[project]
name = "trabalho-2-delta-minio"
version = "0.1.0"
description = "Pipeline SQL Server → MinIO Landing Zone (CSV) → Delta Lake Bronze"
requires-python = ">=3.11"
dependencies = [
    "pyspark==3.5.3",
    "delta-spark==3.2.0",
    "boto3>=1.34.0",
    "pyodbc>=5.1.0",
    "jupyterlab>=4.2.5",
    "pandas>=2.2.0",
    "ipykernel>=6.29.0",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = []

[dependency-groups]
dev = [
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
    "mkdocs-mermaid2-plugin>=1.1.1",
]
